test_programs/compile_failure/noirc_frontend_tests_deny_cyclic_type_aliases/src/main.nr

        type A = B;
        type B = A;
        fn main() {}
    